fixing tabs collapse in rtl

--- a/packages/@react-spectrum/tabs/src/tabs.css
+++ b/packages/@react-spectrum/tabs/src/tabs.css
@@ -36,7 +36,7 @@
 
 .react-spectrum-Tabs--dropdown {
   height: calc(100% - 2px);
-  left: 0;
+  inset-inline-start: 0;
   position: absolute;
   transform: translateY(-50%);
   top: 50%;
